--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://cassiorubens-cr.github.io/portfolio",
+  "homepage": "https://CassioRubens-CR.github.io/portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
